--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,5 +65,14 @@ dependencies {
     implementation 'com.github.smarteist:autoimageslider:1.3.2-appcompat'
     //location dependency
     implementation 'com.google.android.gms:play-services-location:17.0.0'
+    //paykun dependency
+    implementation 'com.paykun.sdk:paykun-checkout-lib:1.1.13'
+    //animation dependency
+    implementation 'com.daimajia.easing:library:2.0@aar'
+    implementation 'com.daimajia.androidanimations:library:2.3@aar'
+    //progress bar dependency
+    implementation 'com.kaopiz:kprogresshud:1.2.0'
+    //skletion layout
+    implementation 'com.faltenreich:skeletonlayout:2.1.0'
 
 }
